vs2003_cd01/Program Files/Microsoft Visual Studio .NET 2003/SDK/v1.1/QuickStart/aspplus/samples/apps/errors/custom2/custom2.src
C# Source:CS/custom2.aspx,CS/notfound.aspx,CS/genericerror.htm,CS/web.config
VB Source:VB/custom2.aspx,VB/notfound.aspx,VB/genericerror.htm,VB/web.config
JScript Source:JS/custom2.aspx,JS/notfound.aspx,JS/genericerror.htm,JS/web.config
